Comments by Lizzie, lots but mostly I think -- this is exciting!

--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -18,11 +18,19 @@
 \setlength{\parindent}{0}
 
 \section{Introduction}
-Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, the net carbon uptake is primarily determined by the length of the growing season \citep{}. Because climate change has advanced spring leafout, widely considered the start of the growing season \citep{} it has been suggested that earlier start of season should translate into a longer growing season and, therefore, more net carbon uptake by terrestrial ecosystems \citep{}. However we haven't really seen this in the data \citep{}. Quantifying carbon uptake by terrestrial plants is a critical aspect of climate forecasting, and therefore it is critical to understand the relationship between phenology, growing seasons and carbon storage.
+Carbon uptake by terrestrial plants is a major determinant of Earth's climate system \citep{} (say more precisely). In mid and high latitudes, the net carbon uptake is primarily determined by the length of the growing season \citep{}. Because climate change has advanced spring leafout, widely considered the start of the growing season \citep{} it has been suggested that earlier start of season should translate into a longer growing season and, therefore, more net carbon uptake by terrestrial ecosystems \citep{}. However we haven't really seen this in the data \citep{}. % Quantifying carbon uptake by terrestrial plants is a critical aspect of climate forecasting, and therefore it is critical to understand the relationship between phenology, growing seasons and carbon storage.
 
-One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if and early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}.
+%emw2024Sep19 -- I would make this paragraph a bit more about the current literature which I *think* has a lot about productivity driving EOS dynamics ... Something like: Increasing research has suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism or consistency of this effect is unclear (Cite Zani and Norby response to Zani, cite Zohner 2023 solstice). New proposals include that plants somehow adjust mid-season based on a combination of growing season heat and daylength (cite Zohner 2023 solstice) while other work suggests a potential fundamental connection between SOS and EOS [don't use EOS and SOS, please, I am just doing it to be quick] (someone said this I am sure? Found some cites below). These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
+%emw2024Sep19 -- We should cite Zani et al. (Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees) here. Also, has Richardson or anyone shown SOS and EOS correlations? Some citations to check out for SOS and EOS correlations ...
+% https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
+% https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
+One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if and early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
 
-But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the lent of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
+%emw2024Sep19 -- Now you have set up the problem so I would then move more QUICKLY to the end of the intro (using some of your text below from the paragraph that starts 'These dynamics suggest that the carbon gain from an extended growing season') and making sure you set up the primary questions for the reader: Does season length connect to SOS (do EOS and SOS correlate)? Why don't we know? Well, we often use satellite data where all species blur together, but the fundamental process should start at the individual level and scale up from through to species and then forests ...  While the constraint should happen at the individual level, we rarely if ever have good EOS, that is -- observations that are of when plants stop growing versus when coloration changes (a known crappy measure, cite). At the next level, as EOS is locally adapted -- plants at different latitudes use unique photoperiods, combined with temperature, to time EOS, this means data across space contains a mix of factors [not sure about this sentence, but wanted to sneak in something like this].  You could re-write what you have below as ...
+
+%emw2024Sep19 -- I think you're sort of giving away the punchline here. I think this makes your findings a bit duller to me ... I would move Fig 1 as the conceptual ending figure, and the next two paragraphs can move down also. This has the added benefit of making the intro shorter and shorter intros are good IMHO. 
+But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the length of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
+%emw2024Sep19 -- also, I am not sure about the term 'phenological carryover' effect (what is a carry-over versus a correlation?) -- you might have to sell it to me over a zoom call or such....
 
 We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
 
@@ -31,13 +39,13 @@ These dynamics suggest that the carbon gain from an extended growing season, dep
 In this study, we use phenological observations from a multi-species common garden study to 
 assess how variation in leafout and  budset phenological among species, years and populations affects the length of the calendar and thermal growing season. Specifically we ask:
 
-\begin{enumerate}
+\begin{enumerate} %emw2024Sep19 -- these seem like good questions to me, we could tighten up how clearly we answer them ... but it would help to know first if we will combine results and discussion?
 \item How strong is the carry-over effect between leafout and budset? 
 \item Which phase more strongly influence variation in growing season length across years, species and populations?
 \item How does variation in the leafout affect the length of the thermal and calendar growing season?
 \end{enumerate}
 
-This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms woo, and improve forecasting.
+This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms woo, and improve forecasting. %emw2024Sep19 -- woo, woo. 
 
 \section{Methods}
 \subsubsection{The common garden at Weld Hill}
@@ -55,7 +63,7 @@ We define the thermal growing season as the cumulative growing degree day heat s
 
 All models were fit in the R package brms on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. All analysis were done in R.
 
-\section{Results}
+\section{Results} %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
 \subsubsection{Sources of variation in calander growing season}
 There was high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). 
 
@@ -66,7 +74,7 @@ Variance in growing season length was highest among species ($\sigma_{species}$:
 
 The lower levels of variance among year in growing season length we observed relative to the high variance in both leafout and budset indicate that variation in the SoS and EoS among years is positively associated (ie early leafout= earlier budset), which is supported by weak but positive pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39] we found between leafout and budset in our study.
 
-\subsubsection{Relationship between leafout phenology and calander and thermal growing seasons}
+\subsubsection{Relationship between leafout phenology and calender and thermal growing seasons}
 
 We found that later leafout resulted in a shorter calendar growing season (Figure \ref{fig:thermcal}a) and that this relationship was consistent across species, though varying strength  (Figure \ref{fig:thermcal}b).
 
@@ -74,12 +82,16 @@ In contrast, we found that a generally later leafout resulted in a longer therma
 
 
 \section{Discussion}
+%emw2024Sep19 -- I find these results so cool that I think you should open broader and bigger and then get into the species differences .. so open with something like 'We found a fundamental and unexpected trade-off between early, longer growing seasons and the thermal growing season." Or something like that ... then talk about how unexpected this is and what it means, then get into the species-level differences in the next paragraph. 
 Our multi-species common garden study showed that for already early leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. In fact, we found that for these early leafing taxa, delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by phenological carry-over between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable.  For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, even an earlier relative leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately large gain in thermal sums.
 
 The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{}, implying their may be little to gain from a carbon perspective.
 
+%emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
+%emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
 So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability which in forest systems is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{}.
 
+%emw2024Sep19 -- yes, it's definitely still true that spring phenology in trees shifts much more than autumn ... you can probably check is the recent ipcc AR5 says it or the Menzel paper from a couple years ago. 
 The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely   
 
 The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
@@ -87,7 +99,7 @@ The low levels of phenological variance between populations in our common garden
  This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). Some forward thinking implications paragraph here.
 
 
-\section{Figures}
+\section{Figures} %emw2024Sep19 -- I really like the figures! But I think if you put the first one last you can introduce as a fundamentally new and important view of early seasons as calendar days versus thermal days that wraps up the whole paper. I might then make the last figure first -- big take-home shocking message given first in figures and text! Then break down the variance and data in the other figure. 
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.5\textwidth]{..//analyses/figures/aronia_examp.jpeg}
