--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -9,7 +9,8 @@
 \usepackage{natbib}
 
 
-\title{Phenological differences among species explain why early leafout extends the calander but not thermal growing season}
+\title{Phenological differences among species explain why early leafout extends the calendar but not thermal growing season}
+%dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- what about potential growing season or suitable
 
 \author{Dan, Cat, Deidre and Lizzie}
 \begin{document}
@@ -24,7 +25,7 @@ Carbon uptake by terrestrial plants is a major determinant of Earth's climate sy
 %emw2024Sep19 -- We should cite Zani et al. (Increased growing-season productivity drives earlier autumn leaf senescence in temperate trees) here. Also, has Richardson or anyone shown SOS and EOS correlations? Some citations to check out for SOS and EOS correlations ...
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.12890?casa_token=eliYnpkve8QAAAAA%3A3TqxdGVY6Sv863uZonpVeX0GE2U3UVN7IBMo-vse5knPZ3GQctM3VgZZRC57IuwCvYqB4O8dcOf2-F7Q
 % https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.13311?casa_token=NnEYx9yLGCEAAAAA%3ANitA233aNa7-xE7BvzyBNEZyL8Uqb6fpN5RFDIT8DERycVM5dv2OPm_o5NNQzwsJx6pSSTzlNsABpZTo
-One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if and early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
+One possible reason that earlier spring phenology many not increase net carbon assimilation (choose a term and stick with it) is if an early start of growing season results in an earlier end of the growing season. These phenological carryover effects (positive associates between phenological phases) are prevalent \citep{} but weaken over the season \citep{}, so it is unlikely variation in SoS and EoS are perfectly correlated. This is reinforced by the observations that calendar growing seasons have indeed gotten longer with climate change \citep{}. 
 
 %emw2024Sep19 -- Now you have set up the problem so I would then move more QUICKLY to the end of the intro (using some of your text below from the paragraph that starts 'These dynamics suggest that the carbon gain from an extended growing season') and making sure you set up the primary questions for the reader: Does season length connect to SOS (do EOS and SOS correlate)? Why don't we know? Well, we often use satellite data where all species blur together, but the fundamental process should start at the individual level and scale up from through to species and then forests ...  While the constraint should happen at the individual level, we rarely if ever have good EOS, that is -- observations that are of when plants stop growing versus when coloration changes (a known crappy measure, cite). At the next level, as EOS is locally adapted -- plants at different latitudes use unique photoperiods, combined with temperature, to time EOS, this means data across space contains a mix of factors [not sure about this sentence, but wanted to sneak in something like this].  You could re-write what you have below as ...
 
@@ -37,7 +38,7 @@ We can see these dynamics play out by tracking the phenology of four individuals
 These dynamics suggest that the carbon gain from an extended growing season, depends not only on the magnitude of phenological shifts but also the timing of those shifts relative to thermal conditions of the vegetative period, which not only vary across time and space, but also across the species that comprise forest communities. Understanding all this (say better) requires  understanding how the relationship between SoS and both thermal and calendar growing season varies depending on the unique phenological positions the species that make up a community. However, this is super difficult to do because...a few reason including...  
 
 In this study, we use phenological observations from a multi-species common garden study to 
-assess how variation in leafout and  budset phenological among species, years and populations affects the length of the calendar and thermal growing season. Specifically we ask:
+assess how variation in leafout and  budset phenology among species, years and populations affects the length of the calendar and thermal growing season. Specifically we ask:
 
 \begin{enumerate} %emw2024Sep19 -- these seem like good questions to me, we could tighten up how clearly we answer them ... but it would help to know first if we will combine results and discussion?
 \item How strong is the carry-over effect between leafout and budset? 
@@ -45,11 +46,11 @@ assess how variation in leafout and  budset phenological among species, years an
 \item How does variation in the leafout affect the length of the thermal and calendar growing season?
 \end{enumerate}
 
-This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms woo, and improve forecasting. %emw2024Sep19 -- woo, woo. 
+This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo. 
 
 \section{Methods}
 \subsubsection{The common garden at Weld Hill}
-In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (Lat long), the Second College Grant of Dartmouth College (lat long) White mountains (lat long) and St. Hippopotamus, CN (lat long). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seeding stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth. Plots were regularly weeded and watered throughout the duration of the study.
+In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seedling stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth. Plots were regularly weeded and watered throughout the duration of the study.
 
 \subsubsection{Phenological monitoring:}
 For the years of 2018-2019, we made phenological observations of all individuals in the common garden twice per week from February to December. In 2020 due to the COVID 19 pandemic we did it a bit less, but Cat can say how much. We describe phenological stages using a modified bbch scale \citep{} a common metrics for quantify woody plant phenological progression. We observed all major vegetative stages (budburst, bbch 07, leafout bbch 15, end of leaf expansion bbch 19, budset bbch X, and leaf coloration/drop bbch z, and reproductive phases flowering (60-65) and fruiting and fruit drop(). 
@@ -68,7 +69,7 @@ All models were fit in the R package brms on 4 chains with a 4000 iteration warm
 There was high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). 
 
 Relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population).
-Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Populations from the Second College Grant set buds approximately three days before those at the from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b). Like leafout 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
+Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Populations from the Second College Grant set buds approximately three days before those from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b). Like leafout 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
 
 Variance in growing season length was highest among species ($\sigma_{species}$: 14.38, $UI_{95}$[9.85,20.81] and lower among years ($\sigma_{year}$: 4.67 $UI_{95}$[0.76,8.63], Figure \ref{fig:vapar}b) and populations ($\sigma_{population}$: 2.50, $UI_{95}$[0.19,2.82], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). Despite substantial difference among years for leafout and budset, the calender growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c).
 
@@ -85,7 +86,7 @@ In contrast, we found that a generally later leafout resulted in a longer therma
 %emw2024Sep19 -- I find these results so cool that I think you should open broader and bigger and then get into the species differences .. so open with something like 'We found a fundamental and unexpected trade-off between early, longer growing seasons and the thermal growing season." Or something like that ... then talk about how unexpected this is and what it means, then get into the species-level differences in the next paragraph. 
 Our multi-species common garden study showed that for already early leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. In fact, we found that for these early leafing taxa, delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by phenological carry-over between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable.  For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, even an earlier relative leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately large gain in thermal sums.
 
-The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{}, implying their may be little to gain from a carbon perspective.
+The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{}, implying there may be little to gain from a carbon perspective.
 
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
@@ -122,4 +123,7 @@ The low levels of phenological variance between populations in our common garden
     \caption{The relationship between Start of Spring (SoS; calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. An increasing later SoS resulted in a shorter calendar growing season (panel a) and this pattern was consistent across species in our study (panel b). In contrast, an increasing later SoS resulted in a longer thermal growing season (panel c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) are display in the typical order of leafout among species. The blue trend lines represent the mean effect of SoS timing on growing season length and black lines represent 1000 draws from the posterior distribution as a measure of uncertainty. Points in a), and c) represent the raw data. \textbf{to do: rename x-axis on b and d and write our the species names}}
     \label{fig:thermcal}
 \end{figure}
+
+\begin{table}[ht]\centering\caption{Species list} \label{listSp}\begin{tabular}{lr}  \hlineSpecies & functional group \\   \hline  \emph{Acer pensylvanicum} & tree    \\   \emph{Acer spicatum} & tree   \\    \emph{Alnus incana} & shrub  \\    \emph{Amelanchier canadensis} &   \\   \emph{Aronia melanocarpa} &  \\   \emph{Betula alleghaniensis} &  \\   \emph{Betula papyrifera} &   \\   \emph{Betula populifolia} &   \\   \emph{Diervilla lonicera} &   \\   \emph{Myrica gale} &  \\   \emph{Sambucus racemosa} &  \\   \emph{Sorbus americana} &  \\
+  \emph{Spiraea alba} &   \\   \emph{Spiraea tomentosa} &   \\   \emph{Viburnum cassinoides} &   \\   \end{tabular}\end{table}
 \end{document}
